# autobib

./: .gitignore  .markdownlint.yaml  ARCHITECTURE.md  COPYRIGHT  Cargo.toml  PUBLISH.md  README.md  RELEASE.md  build.rs  notes.md  test.sh  test.tex
.cargo/: config.toml
.github/actions/install-mitmproxy/: action.yml  init_cert.py
.github/workflows/: brew.yml  ci.yml  mitmdump.yml  release.yml  response_cache.yml  rust.yml
about/: config.toml  template.hbs
docs/: architecture.md  attachments.md  build.md  data_model.md  release.md  source.md  template.md  terminology.md
docs/changelog/: 0.5.0.md  next.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.6.1.md
docs/examples/: default_config.toml
scripts/: README.md  create_test_db.sh  release.sh  test.sh
src/: ;  api.rs  app.rs  arxiv.rs  cite_search.rs  citekey.rs  config.rs  database.rs  db.rs  entry.rs  error.rs  format.rs  http.rs  logger.rs  main.rs  normalize.rs  output.rs  path_hash.rs  provider.rs  record.rs  source.rs  term.rs
src/app/: attach.rs  cli.rs  delete.rs  edit.rs  hist.rs  import.rs  info.rs  log.rs  path.rs  picker.rs  replace.rs  retrieve.rs  source.rs  update.rs  write.rs
src/app/attach/: cleanup.rs  migrate.rs
src/cite_search/: aux.rs  bib.rs  tex.rs  tex_auxfile.rs  txt.rs
src/citekey/: tex.rs
src/config/: default_config.toml  validate.rs
src/database/: citation_keys.sql  records.sql  set_cached_data.sql
src/db/: binary.rs  data.rs  functions.rs  migrate.rs  row.rs  schema.rs  snapshot.rs  sql.rs  state.rs  tree.rs  validate.rs
src/db/migrate/v0/: copy_keys.sql  drop_original.sql  get_table_schema.sql  make_tmp_table.sql  rename_tmp_table.sql
src/db/migrate/v1/: create_indices.sql  create_table_identifiers.sql  create_table_tmp_records.sql  records_new.sql
src/db/row/: operations.rs
src/db/schema/: changelog.sql  citation_keys.sql  create_indices.sql  identifiers.sql  null_records.sql  records.sql
src/db/sql/: clear_null_records.sql  clear_null_records_before.sql  copy_to_changelog.sql  delete_cached_data.sql  delete_cached_null.sql  delete_citation_key.sql  foreign_key_check.sql  get_all_canonical_citation_keys.sql  get_all_citation_keys.sql  get_all_record_data.sql  get_all_records.sql  get_all_referencing_citation_keys.sql  get_cached_null.sql  get_null_record_data.sql  get_null_record_key.sql  get_record_data.sql  get_record_key.sql  init_citation_keys.sql  init_records.sql  integrity_check.sql  optimize.sql  redirect_citation_key.sql  rename_citation_key.sql  set_cached_data.sql  set_cached_null.sql  set_citation_key_fail.sql  set_citation_key_ignore.sql  set_citation_key_overwrite.sql  set_wal.sql  update_cached_data.sql  update_canonical_id.sql
src/db/state/: borrow.rs  disp.rs  entry.rs  missing.rs  null.rs  record.rs  revisions.rs  transaction.rs  tree.rs  unvalidated.rs  version.rs
src/db/state/record/: entry.rs
src/db/validate/: find_cycles.rs
src/entry/: data.rs  deserialize.rs
src/entry/data/: identifier.rs  raw.rs  tests.rs
src/error/: bibtex.rs  database.rs  format.rs  provider.rs  record.rs  record_data.rs  source.rs
src/format/: parse.rs
src/http/: cache.rs  localproxy.rs
src/http/cache/: format.rs  read.rs  write.rs
src/http/localproxy/: read.rs  write.rs
src/provider/: arxiv.rs  doi.rs  isbn.rs  jfm.rs  local.rs  mr.rs  ol.rs  zbl.rs  zbmath.rs
src/provider/zbmath/: response.rs
src/record/: error.rs  key.rs
src/record/key/: mapped.rs
src/share/: test.rs
src/source/: arxiv.rs  doi.rs  jfm.rs  test.rs  zbl.rs  zbmath.rs
src/term/: confirm.rs  editor.rs  input.rs  picker.rs
tests/: README.md  cli.rs  remotes.txt
tests/databases/: v0.db
tests/resources/alias/: stdout.txt
tests/resources/alias_remote/: stdout.txt
tests/resources/auto_alias/: config.toml  stdout.txt  stdout_mr.txt
tests/resources/config/: extra.toml  malformed.toml
tests/resources/dedup/: init.bib
tests/resources/edit/: stdout_unedited.txt
tests/resources/get/: stdout.txt
tests/resources/get_append/: stdout.txt
tests/resources/import/: config.toml  file.bib  id_contains_colon.bib  no_ids.bib  retrieve.bib  stdout_local.txt  stdout_local_2.txt  stdout_remote.txt  stdout_retrieve.txt
tests/resources/local/: first.bib  stdout.txt  stdout_short.txt
tests/resources/merge/: stdout.txt
tests/resources/normalize/: stdout.txt
tests/resources/on_insert/: config.toml  stdout.txt
tests/resources/path/: attachment.txt
tests/resources/source/: main.tex  stdout.txt
tests/resources/source_keys_only/: stdout.txt
tests/resources/source_skip/: main.tex  skip.bib  skip.tex  stdout.txt
tests/resources/strip_journal_series/: config.toml  stdout.txt
