[package]
name = "autobib"
authors = ["Alex Rutar <alex@rutar.org>", "Peiran Wu"]
description = "An automatic bibliography generation tool."
repository = "https://github.com/autobib/autobib"
homepage = "https://github.com/autobib/autobib"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["cli", "bibtex", "biblatex", "bibliography"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = { version = "0.4", features = ["release_max_level_info"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap-verbosity-flag = "2.2"
crossterm = "0.28"
delegate = "0.12"
edit = "0.1"
either = "1.13"
etcetera = "0.8"
itertools = "0.13"
lazy_static = "1.5"
memchr = "2.7"
nonempty = "0.10"
nucleo-picker = "0.4"
quick-xml = { version = "0.31", features = ["serialize"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["rustls-tls", "blocking", "gzip"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_bibtex = "0.4.1"
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"

[lints.clippy]
redundant_closure_for_method_calls = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
