[package]
name = "autobib"
authors = ["Alex Rutar <alex@rutar.org>", "Peiran Wu"]
description = "An automatic bibliography generation tool."
repository = "https://github.com/autobib/autobib"
homepage = "https://github.com/autobib/autobib"
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["cli", "bibtex", "biblatex", "bibliography"]
categories = ["command-line-utilities"]
version = "0.4.0"
rust-version = "1.90"
edition = "2024"

[features]
read_response_cache = ["dep:bincode"]
write_response_cache = ["dep:bincode"]

[dependencies]
anyhow = "1.0"
bincode = { version = "2.0", optional = true }
log = { version = "0.4", features = ["release_max_level_info"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
clap-verbosity-flag = "3.0"
crossterm = "0.29"
data-encoding = "2.9"
delegate = "0.13"
edit = "0.1"
etcetera = "0.10"
itertools = "0.14"
lockstep = "0.3"
memchr = "2.7"
nonempty = "0.12"
nucleo-picker = "0.9.0"
rapidhash = "4.1"
regex = "1.11"
regex-syntax = "0.8"
rsxiv = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.37", features = ["bundled", "chrono", "functions"] }
serde = { version = "1.0", features = ["derive"] }
serde_bibtex = "0.7.0"
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
ureq = "3.1"
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"

[profile.release]
lto = true

[profile.profiling]
inherits = "release"
debug = true

[lints.clippy]
redundant_closure_for_method_calls = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
use_self = "warn"
